Updated code but still doesn't check for common words correctly